Finishing implementation. Still many todos
Signed-off-by: maxi <maxi@swirldslabs.com>