@@ -19,12 +19,11 @@ package com.swirlds.logging.test.fixtures.internal;
 import com.swirlds.logging.api.Level;
 import com.swirlds.logging.api.Marker;
 import com.swirlds.logging.api.extensions.event.LogEvent;
+import com.swirlds.logging.api.extensions.event.LogEventConsumer;
 import com.swirlds.logging.api.extensions.handler.LogHandler;
-import com.swirlds.logging.api.internal.DefaultLoggingSystem;
 import com.swirlds.logging.test.fixtures.LoggingMirror;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.function.Predicate;
@@ -33,7 +32,7 @@ import java.util.function.Predicate;
  * A concrete implementation of the {@link LoggingMirror} interface that serves as a logging mirror and also implements
  * the {@link LogHandler} interface to receive and store log events.
  */
-public class LoggingMirrorImpl implements LoggingMirror, LogHandler {
+public class LoggingMirrorImpl implements LoggingMirror, LogEventConsumer {
 
     private final List<LogEvent> events = new CopyOnWriteArrayList<>();
 
@@ -44,20 +43,10 @@ public class LoggingMirrorImpl implements LoggingMirror, LogHandler {
     public LoggingMirrorImpl() {}
 
     /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void handle(@NonNull final LogEvent event) {
-        events.add(event);
-    }
-
-    /**
      * Clears the mirror and disposes it. This method is automatically called before and after a test.
      */
     @Override
-    public void close() {
-        DefaultLoggingSystem.getInstance().removeHandler(this);
-    }
+    public void close() {}
 
     /**
      * {@inheritDoc}
@@ -68,21 +57,9 @@ public class LoggingMirrorImpl implements LoggingMirror, LogHandler {
         return new FilteredLoggingMirror(events, filter, this::close);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public List<LogEvent> getEvents() {
-        return Collections.unmodifiableList(events);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @NonNull
-    @Override
-    public String getName() {
-        return "LoggingMirror";
+        return List.copyOf(events);
     }
 
     /**
@@ -96,5 +73,10 @@ public class LoggingMirrorImpl implements LoggingMirror, LogHandler {
     @Override
     public boolean isEnabled(@NonNull final String name, @NonNull final Level level, @Nullable final Marker marker) {
         return true;
+    }
+
+    @Override
+    public void accept(@NonNull LogEvent event) {
+        events.add(event);
     }
 }
